Atualização do Ionic
Framework v1.0.0-beta.14 -> v1.0.0-rc.1
Icons v1.5.2 -> v2.0.1

--- a/app/public/templates/index.html
+++ b/app/public/templates/index.html
@@ -1,11 +1,11 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <ion-tab title="ask" icon-off="ion-ios7-help-outline" icon-on="ion-ios7-help" href="#/tab/ask">
-    <ion-nav-view name="tab-ask"></ion-nav-view>
-  </ion-tab>
+    <ion-tab title="ask" icon-off="ion-ios-help-outline" icon-on="ion-ios-help" href="#/tab/ask">
+        <ion-nav-view name="tab-ask"></ion-nav-view>
+    </ion-tab>
 
-  <ion-tab title="questions" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/questions">
-    <ion-nav-view name="tab-questions"></ion-nav-view>
-  </ion-tab>
+  <ion-tab title="questions" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/questions">
+        <ion-nav-view name="tab-questions"></ion-nav-view>
+    </ion-tab>
 
 </ion-tabs>
