--- a/app/speaker/full/templates/index.html
+++ b/app/speaker/full/templates/index.html
@@ -4,15 +4,15 @@
     <ion-nav-view name="tab-control"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/questions">
+  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/questions">
     <ion-nav-view name="tab-questions"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Camera" icon-off="ion-ios7-camera-outline" icon-on="ion-ios7-camera" href="#/tab/camera">
+  <ion-tab title="Camera" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" href="#/tab/camera">
     <ion-nav-view name="tab-camera"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Configs" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/configs">
+  <ion-tab title="Configs" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/configs">
     <ion-nav-view name="tab-configs"></ion-nav-view>
   </ion-tab>
 
